--- a/donuts_agent/templates/ZONE.slave.conf
+++ b/donuts_agent/templates/ZONE.slave.conf
@@ -1,6 +1,9 @@
 zone "{ZONE}" {{
      type slave;
      file "{DATABASE}";
-     masters {{ {MASTER}; }};
+     notify no;
+     zone-statistics yes;
+     masters {{
+       "{MASTER}";
+     }};
 }};
-
