--- a/donuts_agent/templates/ZONE.slave.conf
+++ b/donuts_agent/templates/ZONE.slave.conf
@@ -3,7 +3,5 @@ zone "{ZONE}" {{
      file "{DATABASE}";
      notify no;
      zone-statistics yes;
-     masters {{
-       "{MASTER}";
-     }};
+     masters {{ "{MASTER}"; }};
 }};
